[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mchammer-moves"
version = "0.1.0"
description = "Custom Monte Carlo moves for icet/mchammer."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Benjamin J. Morgan", email = "b.j.morgan@bath.ac.uk" }]
dependencies = [
    "icet>=2.0",
    "numpy",
    "ase",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
# `mchammer-pt` is an optional integration dependency: importing
# `mchammer_moves` itself does not require it, but consuming
# `CustomCanonicalEnsemble` through parallel tempering does. The
# integration uses `mchammer-pt`'s native `ensemble_cls=` /
# `ensemble_kwargs=` API (mchammer-pt v0.2+); the public
# `mchammer_pt.testing.assert_boltzmann_sampling` utility is used by
# the combined-kernel Boltzmann-sampling test in this package.
pt = ["mchammer-pt"]
dev = ["pytest>=7", "scipy", "mypy", "ruff", "mchammer-pt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["mchammer_moves"]
strict = true
warn_return_any = false

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
