[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mchammer-moves"
version = "0.6.1"
description = "Custom Monte Carlo moves for icet/mchammer."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Benjamin J. Morgan", email = "b.j.morgan@bath.ac.uk" }]
dependencies = [
    "icet>=3.2",
    "numpy",
    "ase",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "scipy",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["mchammer_moves"]
strict = true
warn_return_any = false

# `mchammer` (icet) ships without a `py.typed` marker, so mypy
# treats it as an untyped third-party dependency. The exact error
# code mypy assigns depends on how the package is installed
# (`import-untyped` for site-packages installs, `import-not-found`
# for editable / source-tree installs); ignoring missing imports
# here covers both and removes the need for per-import
# `# type: ignore` suppressions that drift across mypy versions.
[[tool.mypy.overrides]]
module = ["mchammer.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
